2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c: Fix crasher and memory leaks
    in proxy support. Bug #324312
    
2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-passphrase.c: Don't crash when prompting
    for passphrases without prompt string. Fixes Bug #334275
    
2006-03-10  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-hkp-source.c: Respect GNOME
    proxy settings.(Bug #324312)

2006-03-08  Adam Schreiber  <sadam@clemson.edu>

    * agent/seahorse-agent-status.c:
    * plugins/applet/seahorse-applet.c: Make windows 
    that appear have the proper image in the window selector.
    * plugins/applet/seahorse-applet.c: Make proper icon display 
    in About dialog. 

2006-03-06  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Update version number to 0.9.1

2006-03-05  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README:
    * INSTALL: Version 0.9.0
    
2005-03-05  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/Makefile.am:
    * libcryptui/Makefile.am:
    * pixmaps/Makefile.am: make distcheck fixes
    
2006-02-26  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-add-keyserver.glade:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-progress.glade:
    * libseahorse/seahorse-recipients.glade:
    * libseahorse/seahorse-signer.glade:
    * src/seahorse-add-subkey.glade:
    * src/seahorse-add-uid.glade:
    * src/seahorse-change-passphrase.glade:
    * src/seahorse-expires.glade:
    * src/seahorse-generate-adv.glade:
    * src/seahorse-generate-select.glade:
    * src/seahorse-key-manager.glade:
    * src/seahorse-keyserver-search.glade:
    * src/seahorse-keyserver-sync.glade:
    * src/seahorse-multi-encrypt.glade:
    * src/seahorse-preferences.glade:
    * src/seahorse-revoke.glade:
    * src/seahorse-sign.glade:
    * src/seahorse-ssh-upload.glade: Patch from chpe to put proper 