@@ -1,3 +1,9 @@
+2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-gconf.c:
+    * libseahorse/seahorse-gconf.h: Make seahorse_gconf_notify_lazy support
+    any object as the lifetime parameter.
+    
 2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-hkp-source.c: Fix crasher and memory leaks
